# ranno

./: .gitignore  CHANGELOG.md  README.md  SDK.md  pyproject.toml  requirements.txt
.github/workflows/: hf-space-deployment.yml
api/: index.py
lib/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
lib/app/: config.py  main.py
lib/ranno/: __init__.py  _cf.py  _ex.py  _gn.py  _sv.py
ranno/: __init__.py  _ex.py  _gn.py  ex.py  gn.py
web/: README.md  components.json  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/app/og/: page.tsx
web/components/: Figlet.tsx
web/components/layout/: Footer.tsx  Navbar.tsx
web/components/ui/: animated-theme-toggler.tsx  badge.tsx  click-spark.tsx  dialog.tsx  morphing-text.tsx
