[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ranno"
version = "0.3.2"
description = "Instant code generation & execution from prompts."
authors = [{name = "Saptarshi Roy"}]
license = "MIT"
readme = "README.md"

requires-python = ">=3.7"
dependencies = ["requests", "magika", "pandas"]

[project.urls]
Repository = "https://github.com/saptarshiroy39/Ranno"
Homepage = "https://pypi.org/project/ranno"

[tool.setuptools]
packages = ["ranno"]
